<resources>
    <string name="app_name">Business-Card</string>
    <string name="label_business_cards">Cartões de Visita</string>
    <string name="label_description_new_card">Novo Cartão</string>
    <string name="label_nome">Nome</string>
    <string name="label_telefone">Telefone</string>
    <string name="label_email">E-mail</string>
    <string name="label_empresa">Empresa</string>
    <string name="label_cor">Cor</string>
    <string name="label_confirmar">Confirmar</string>
    <string name="label_show_success">Cartão registrado com sucesso.</string>
    <string name="label_share_to">Compartilhar</string>
    <string name="toast_falta_nome">Informe o nome.</string>
    <string name="toast_falta_telefone">Informe o telefone.</string>
    <string name="toast_falta_email">Informe o e-mail.</string>
    <string name="toast_falta_empresa">Informe a empresa.</string>
    <string name="toast_falta_corCartao">Informe a cor do cartão.</string>
    <string name="toast_corHexadecimalInvalida">Informe uma cor hexadecimal válida.</string>
    <string name="toast_telefoneInvalido">Informe um número de telefone válido.</string>
</resources>